@@ -96,7 +96,7 @@ WIN32_RES_LDADD = ica_win_resources.o -L. -lvnchooks
 endif
 
 ica_LDADD = $(QT_LDADD) $(QT_LIB_GUI) -lz -ljpeg $(LIBSSL_LDADD) $(IVSLDADD) $(WIN32_RES_LDADD) -L../lib -litalc_core
-ica_LDFLAGS = $(LDFLAGS) -mwindows
+ica_LDFLAGS = $(LDFLAGS) -mwindows -rpath $(pkglibdir)
 
 AM_CXXFLAGS := $(AM_CXXFLAGS) $(QT_CXXFLAGS) -O2 -DBUILD_ICA $(CXXFLAGS_ADD)
 AM_CFLAGS := $(AM_CFLAGS) -O2 -DBUILD_ICA -DVNCSHARED -DFOREVER -DNOREPEAT=0 -DNOPW=1 -DREMOTE_CONTROL=0 -DEXTERNAL_COMMANDS=0 -DFILEXFER=0 -DNOGUI -DSMALL_FOOTPRINT=1 -w
